# twig

./: .gitignore  COOKBOOK.md  DESIGN.md  LICENSE-APACHE  README.md  build.zig  build.zig.zon  document-metadata.md  flake.nix  flower.md  twig.md  update.md
.github/workflows/: ci.yml  homebrew.yml  release.yml
bindings/c/include/: twig.h
bindings/c/test/: header_test.c
bindings/rust/: Cargo.toml  prebuilt-targets.tsv
bindings/rust/scripts/: build-payload-lib.sh  gen-payloads.sh
bindings/rust/twig/: Cargo.toml  README.md  build.rs  vendor-zig.sh
bindings/rust/twig-sys/: Cargo.toml  README.md  build.rs
bindings/rust/twig-sys-linux-arm64-gnu/: Cargo.toml  README.md
bindings/rust/twig-sys-linux-arm64-gnu/src/: lib.rs
bindings/rust/twig-sys-linux-x64-gnu/: Cargo.toml  README.md
bindings/rust/twig-sys-linux-x64-gnu/src/: lib.rs
bindings/rust/twig-sys-macos-arm64/: Cargo.toml  README.md  build.rs
bindings/rust/twig-sys-macos-arm64/src/: lib.rs
bindings/rust/twig-sys-wasm32/: Cargo.toml  README.md
bindings/rust/twig-sys-wasm32/src/: lib.rs
bindings/rust/twig-sys-windows-x64-msvc/: Cargo.toml  README.md
bindings/rust/twig-sys-windows-x64-msvc/src/: lib.rs
bindings/rust/twig-sys/src/: lib.rs
bindings/rust/twig/src/: error.rs  ffi.rs  lib.rs
proposals/: in-cell-line-breaks.md  literal-text-insertion.md
scripts/: sync-version.sh
src/: c_abi.zig  format.zig  main.zig  root.zig  span.zig  syntax.zig
src/ast/: ast.zig  builder.zig  editor.zig  editor_test.zig  filter.zig  json.zig  locate.zig  locator.zig  reader.zig  select.zig  splicer.zig  table_edit.zig
src/bench/: counting_allocator.zig  main.zig
src/cli/: actions.zig  args.zig  ast_json.zig  format.zig
src/languages/djot/: attributes.zig  block.zig  conformance.zig  djot.zig  event.zig  html.zig  inline.zig  parser.zig  serializer.zig  syntax.zig
src/languages/html/: conformance.zig  html.zig  parser.zig  serializer.zig
src/languages/markdown/: attributes.zig  block.zig  conformance.zig  entities.zig  gfm_conformance.zig  html.zig  inline.zig  markdown.zig  options.zig  serializer.zig  syntax.zig
src/languages/markdown/testdata/: gfm-spec-0.29-extensions.json
src/languages/xml/: parser.zig  serializer.zig  xml.zig
