[package]
name = "twig-sys-linux-arm64-gnu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Prebuilt libtwig.a for aarch64-unknown-linux-gnu. Support crate for twig-sys; not for direct use."
repository = "https://github.com/adammharris/twig"
# The build script hands `lib/libtwig.a`'s location to `twig-sys` via this
# `links` key (as `DEP_TWIG_PREBUILT_LINUX_ARM64_GNU_LIBDIR`). Unique per payload crate.
links = "twig_prebuilt_linux_arm64_gnu"
# Allowlist: the prebuilt archive plus the trivial crate skeleton. `lib/` is
# git-ignored and populated by scripts/build-payload-lib.sh (or CI) before publish.
include = ["build.rs", "src/lib.rs", "lib/libtwig.a", "README.md"]

[lib]
name = "twig_sys_linux_arm64_gnu"
path = "src/lib.rs"
