[package]
name = "twig-sys-macos-arm64"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Prebuilt libtwig.a for aarch64-apple-darwin. Support crate for twig-sys; not for direct use."
repository = "https://github.com/adammharris/twig"
# The build script hands `lib/libtwig.a`'s location to `twig-sys` via this
# `links` key (as `DEP_TWIG_PREBUILT_MACOS_ARM64_LIBDIR`). Unique per payload crate.
links = "twig_prebuilt_macos_arm64"
# Allowlist: the prebuilt archive plus the trivial crate skeleton. `lib/` is
# git-ignored and populated by scripts/build-payload-lib.sh (or CI) before publish.
include = ["build.rs", "src/lib.rs", "lib/libtwig.a", "README.md"]

[lib]
name = "twig_sys_macos_arm64"
path = "src/lib.rs"
