[package]
name = "twig-sys-windows-x64-msvc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Prebuilt libtwig.a for x86_64-pc-windows-msvc. Support crate for twig-sys; not for direct use."
repository = "https://github.com/adammharris/twig"
# The build script hands `lib/libtwig.a`'s location to `twig-sys` via this
# `links` key (as `DEP_TWIG_PREBUILT_WINDOWS_X64_MSVC_LIBDIR`). Unique per payload crate.
links = "twig_prebuilt_windows_x64_msvc"
# Allowlist: the prebuilt archive plus the trivial crate skeleton. `lib/` is
# git-ignored and populated by scripts/build-payload-lib.sh (or CI) before publish.
include = ["build.rs", "src/lib.rs", "lib/twig.lib", "README.md"]

[lib]
name = "twig_sys_windows_x64_msvc"
path = "src/lib.rs"
