[package]
# Published as `twig-doc` because the plain `twig` crate name is taken (by an
# abandoned templating crate). The library itself is still Twig — `[lib] name`
# below stays `twig`, so consumers write `use twig::…`; only the dependency
# line is `twig-doc = "…"`.
name = "twig-doc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parse, query, edit, and losslessly round-trip Djot, Markdown, HTML, and XML documents."
repository = "https://github.com/diaryx-org/twig"
homepage = "https://github.com/diaryx-org/twig"
documentation = "https://docs.rs/twig"
readme = "README.md"
keywords = ["djot", "markdown", "parser", "ast", "document"]
categories = ["parser-implementations", "text-processing"]
# `offset_of!` (1.77) + edition 2024 (1.85).
rust-version = "1.85"

# `include` is an allowlist: only these files are packaged. The native library
# and its Zig source now live entirely in `twig-sys` (a dependency), so this
# crate packages only its own Rust sources — no `build.rs`, no vendored `zig/`.
include = [
    "src/**/*.rs",
    "README.md",
]

[dependencies]
# The `-sys` layer: raw FFI + the `links = "twig"` build script that compiles
# and links `libtwig.a`. Version-locked via [workspace.dependencies].
twig-sys = { workspace = true }

[lib]
name = "twig"
path = "src/lib.rs"
